cabal-version:      2.4
name:               ccalc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             xRetart
maintainer:         richard.network96@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable ccalc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Logic Args Calc Error RPN.Make RPN.Error RPN.Structure RPN.Eval Math.Uniform Math.Diverse Math.Error

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.2.0,
        containers ^>=0.6.4.1
    hs-source-dirs:   src
    default-language: Haskell2010
