cabal-version:      2.4
name:               ccalc
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A commandline utility for calculating mathematical expressions in postfix notation.

-- A longer description of the package.
description:
    The `ccalc` commandline binary parses and evaluates mathematical expressions
    in postfix notation. It aims to provide a simple and small utility
    useful for embedding in scripts and in any development procces.
    Open-source and Written in Haskell it is platform independent and secure.

-- A URL where users can report bugs.
bug-reports: https://github.com/xRetart/ccalc

-- The license under which the package is released.
license: BSD-3-Clause
author:             xrchrd
maintainer:         richard.network96@gmail.com

-- A copyright notice.
-- copyright:
-- category:

executable ccalc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Logic
        Logic.Error
        Logic.Utils
        Logic.Args
        Logic.Args.Error
        Logic.Calc
        Logic.Calc.Error
        Logic.Calc.Expression.Parse
        Logic.Calc.Expression.Error
        Logic.Calc.Expression.Structure
        Logic.Calc.Expression.Eval
        Logic.Calc.Math.Uniform
        Logic.Calc.Math.Diverse
        Logic.Calc.Math.Error

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.2.0,
        containers ^>=0.6.4.1
    hs-source-dirs:   src
    default-language: Haskell2010